--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "feedback-app",
+  "homepage": "http://AdiBader.github.io/fdbkapp",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
